# LetBroRock

./: .gitignore  CMakeLists.txt  README.md
docs/: desing.md
include/: buffer_manager.h  consts.h  decoder.hpp  excutable_segments.h  executable_segments.h  instruction_dependancy.h  log.h  runtime_simulator.h  stack_lbr_utils.h  thread_context.h  unwind.h  utils.h
src/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
src/engine/: main.cpp
src/offline_analysis/: analysis.py  main.cpp
src/test/: file1.txt  file2.txt  file3.txt  loop  read  read.cpp  simpleLoop.cpp
src/test/bp/: foo.cpp  t.cpp
src/test/buffer_manager/: main.cpp  test.cpp
src/test/evaluate_br/: a.out  collect.sh  dump  dump.cpp  foo  foo.cpp  foo2  foo2.cpp  gdb.txt  mul_thread.cpp  my_file  q  wkx_file
src/test/hook/: foo.cpp  hook.cpp
src/test/perf/: foo  foo.cpp
src/test/test_br/: CMakeLists.txt  main.cpp
src/test/test_lib/: CMakeLists.txt  main.cpp
src/test/threads/: CMakeLists.txt  foo.cpp  simpleProfiler.cpp
src/utils/: log.cpp  thread_context.cpp  utils.cpp
